--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <body>
     <header>
         <h1>Metric/Imperial Unit Conversion</h1>
-        <input type="number">
-        <button>Convert</button>
+        <input id="input-num" type="number">
+        <button id="convert-btn">Convert</button>
     </header>
     <div class="results-container">
         <article>
             <h4>Length (Meter/Feet)</h4>
-            <p>20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
+            <p id="length-conversions">20 meters = 65.616 feet | 20 feet = 6.096 meters</p>
         </article>
         <article>
             <h4>Volume (Liters/Gallons)</h4>
-            <p>20 liters = 5.284 gallons | 20 gallons = 70.708 liters</p>
+            <p id="volume-conversions">20 liters = 5.284 gallons | 20 gallons = 70.708 liters</p>
         </article>
         <article>
             <h4>Mass (Kilograms/Pounds)</h4>
-            <p>20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
+            <p id="mass-conversions">20 kilos = 44.092 pounds | 20 pounds = 9.072 kilos</p>
         </article>
     </div>
 	<script src="index.js"></script>
